# swagger/swagger.json
@@ -697,6 +697,45 @@
                 }
             }
         },
+        "/wx/wxregist": {
+            "post": {
+                "tags": [
+                    "wx"
+                ],
+                "description": "post wx regist",
+                "operationId": "RegistController.post wx regist",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "uname",
+                        "description": "The username of ueser",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "password",
+                        "description": "The password of account",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/.SaveUser"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid page supplied"
+                    },
+                    "404": {
+                        "description": "user not found"
+                    }
+                }
+            }
+        },
         "/wx/wxstandardpdf/{id}": {
             "get": {
                 "tags": [
@@ -759,6 +798,9 @@
             "type": "object"
         },
         ".SUCCESS": {
+            "type": "object"
+        },
+        ".SaveUser": {
             "type": "object"
         },
         ".success": {
